--- a/Style/style.css
+++ b/Style/style.css
@@ -5,16 +5,21 @@ h1.title {
 p.subtext {
     display: flex;
 }
-div.inputHolder{
+div.inputHolder {
 	width: auto
 }
-.inputHolder input{
+.inputHolder input {
 }
-.inputHolder label{
+.inputHolder label {
 	display: inline-block;
 	width: 200px;
 	margin-right: 10px;
 }
-.hide{
+.hide {
 	display: none;
+}
+
+.mortgageStats {
+    white-space: pre;
+    margin-top: 10px
 }
