--- a/Style/style.css
+++ b/Style/style.css
@@ -28,3 +28,15 @@ div.inputHolder {
     max-width: 800px;
     max-height: 600px;
 }
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    margin: 12px;
+}
+
+#chartHolder div *{
+    margin: 5px;
+}
