--- a/Style/style.css
+++ b/Style/style.css
@@ -43,11 +43,18 @@ div.inputHolder {
 
 .about {
     max-width: 800px;
-    margin: 6px 10px 10px 5px;
+    margin: 0px 10px 0px 10px;
     border: solid;
     border-width: 2px;
     border-color: lightgray;
 }
-.about p{
+
+.about div {
     margin: 7px;
+}
+.about div h3 {
+    margin: 0px 0px 3px 0px;
+}
+.about div p {
+    margin: 0px;
 }
