--- a/Style/style.css
+++ b/Style/style.css
@@ -1,20 +1,29 @@
-h1.title {
-    display: flex;
+.title {
+    max-width: 800px;
+    text-align: center;
+}
+
+.title h1{
+    display: inline-block;
 }
 
 p.subtext {
     display: flex;
 }
+
 div.inputHolder {
 	width: auto
 }
+
 .inputHolder input {
 }
+
 .inputHolder label {
 	display: inline-block;
 	width: 200px;
 	margin-right: 10px;
 }
+
 .hide {
 	display: none;
 }
@@ -43,15 +52,16 @@ div.inputHolder {
 
 .about {
     max-width: 800px;
-    margin: 0px 10px 0px 10px;
+    margin: 5px 10px 0px 10px;
     border: solid;
     border-width: 2px;
     border-color: lightgray;
 }
 
 .about div {
-    margin: 7px;
+    margin: 3px 5px 3px 5px;
 }
+
 .about div h3 {
     margin: 0px 0px 3px 0px;
 }
