--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,13 +219,13 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/2.jpg") top center;
+  background: url("../img/cover.jpg") top center;
   background-size: cover;
 }
 
 #hero:before {
   content: "";
-  background: rgba(5, 13, 24, 0.3);
+  background: rgba(5, 13, 24, 0.05);
   position: absolute;
   bottom: 0;
   top: 0;
