--- a/Style/style.css
+++ b/Style/style.css
@@ -183,15 +183,6 @@ abbr:where([title]) {
   -webkit-text-decoration:underline dotted;
   text-decoration:underline dotted
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-size:inherit;
-  font-weight:inherit
-}
 a {
   color:inherit;
   text-decoration:inherit
@@ -2102,13 +2093,7 @@ video {
   margin-left:30px;
   margin-right:30px
 }
-* {
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  font-family:var(--font-family);
-  font-size:16px
-}
+
 .box_img img {
   max-height:350px;
   min-height:350px
@@ -2394,4 +2379,45 @@ nav input {
 
 .bg-white {
     background-color: rgb(255, 255, 255);
+}
+
+.button {
+  background: #4E9CAF;
+  padding: 10px;
+  text-align: center;
+  border-radius: 10px;
+  color: white;
+  font-weight: bold;
+  line-height: 40px;
+  justify-self: center;
+}
+
+.actualbutton {
+  background: #4E9CAF;
+  text-align: center;
+  border-radius: 10px;
+  color: white;
+  font-weight: bold;
+  line-height: 40px;
+  justify-self: center;
+  width: 135px;
+  padding: 1px;
+  
+}
+
+.center {
+  margin: auto;
+  padding: 10px;
+  vertical-align: middle;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  line-height: 75px;
+}
+
+.titlesplash {
+  text-align: center;
+  padding: 30px;
+  vertical-align: middle;
 }
